fixing issue of landscape view on mobile showing gap on left/right

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,11 @@
   padding: 0;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+
 html {
   font-size: 62.5%;
 }
@@ -19,7 +24,8 @@ html {
 }
 
 .app-wrapper, .page, .logged-in-out {
-  display: flex; 
+  display: flex;
+  width: 100%;
 }
 
 .app-wrapper, .page {
